# opentelemetry-cpp

./: CHANGELOG.md  CMakeLists.txt  third_party_latest  third_party_release
.devcontainer/: Dockerfile.conan  Dockerfile.dev
.github/workflows/: ci.yml  cmake_install.yml  iwyu.yml
api/: CMakeLists.txt
api/include/opentelemetry/context/: context.h
api/include/opentelemetry/trace/: context.h
api/include/opentelemetry/trace/propagation/: http_trace_context.h
ci/: README.md  do_ci.ps1  do_ci.sh  install_thirdparty.sh  setup_ci_environment.sh  setup_cmake.sh  setup_cmake_macos.sh  setup_googletest.sh  setup_windows_ci_environment.ps1
cmake/: benchmark.cmake  curl.cmake  find-package-support-functions.cmake  googletest.cmake  grpc.cmake  ms-gsl.cmake  nlohmann-json.cmake  opentelemetry-proto.cmake  opentracing-cpp.cmake  otel-install-functions.cmake  prometheus-cpp.cmake  protobuf.cmake  threads.cmake  tools.cmake  version.cmake  zlib.cmake
cmake/templates/: thirdparty-built-with-flags.cmake.in
docker/grpc/: CMakeLists.txt
exporters/elasticsearch/src/: es_log_recordable.cc
exporters/ostream/include/opentelemetry/exporters/ostream/: metric_exporter.h
exporters/ostream/src/: metric_exporter.cc
exporters/otlp/: BUILD  CMakeLists.txt
exporters/otlp/benchmark/: otlp_log_recordable_benchmark.cc  otlp_metric_utils_benchmark.cc  otlp_trace_recordable_benchmark.cc
exporters/otlp/include/opentelemetry/exporters/otlp/: otlp_grpc_client_factory.h
exporters/prometheus/: CMakeLists.txt
install/cmake/: CMakeLists.txt
install/conan/: conanfile_latest.txt  conanfile_stable.txt
install/test/cmake/: CMakeLists.txt
install/test/cmake/component_tests/api/: CMakeLists.txt
install/test/cmake/component_tests/exporters_elasticsearch/: CMakeLists.txt
install/test/cmake/component_tests/exporters_etw/: CMakeLists.txt
install/test/cmake/component_tests/exporters_in_memory/: CMakeLists.txt
install/test/cmake/component_tests/exporters_ostream/: CMakeLists.txt
install/test/cmake/component_tests/exporters_otlp_common/: CMakeLists.txt
install/test/cmake/component_tests/exporters_otlp_file/: CMakeLists.txt
install/test/cmake/component_tests/exporters_otlp_grpc/: CMakeLists.txt
install/test/cmake/component_tests/exporters_otlp_http/: CMakeLists.txt
install/test/cmake/component_tests/exporters_prometheus/: CMakeLists.txt
install/test/cmake/component_tests/exporters_zipkin/: CMakeLists.txt
install/test/cmake/component_tests/ext_common/: CMakeLists.txt
install/test/cmake/component_tests/ext_dll/: CMakeLists.txt
install/test/cmake/component_tests/ext_http_curl/: CMakeLists.txt
install/test/cmake/component_tests/sdk/: CMakeLists.txt
install/test/cmake/component_tests/shims_opentracing/: CMakeLists.txt
install/test/cmake/fetch_content_test/: CMakeLists.txt
install/test/cmake/package_test/: CMakeLists.txt
opentracing-shim/: CMakeLists.txt
sdk/include/opentelemetry/sdk/metrics/exemplar/: reservoir_cell.h
sdk/include/opentelemetry/sdk/metrics/state/: sync_metric_storage.h
sdk/include/opentelemetry/sdk/trace/: tracer.h
sdk/src/logs/: logger.cc
sdk/src/trace/: tracer.cc
sdk/test/trace/: tracer_test.cc
tools/triplets/: x64-windows-debug-only.cmake
